Fix: Mobile dark mode

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -117,6 +117,9 @@ $bg-color: #f1f3f5;
 
     .search-icon {
       background: #222;
+      &:hover {
+        background: #222;
+      }
     }
 
     .arrow-open {
